cabal-version:      2.4
name:               buildhat
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            LGPL-3.0-or-later
license-file:       LICENSE
author:             James Hobson
maintainer:         j.w.hobson@icloud.com

data-dir: firmware
data-files: firmware.bin
            signature.bin
            version

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Robotics.BuildHAT.LowLevel.Commands
                      Robotics.BuildHAT.LowLevel.Motors

    -- Modules included in this library but not exported.
    other-modules: Paths_buildhat

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4 && < 5,
                      serialport,
                      bytestring >= 0.11.1.0,
                      mtl,
                      attoparsec
    hs-source-dirs:   src
    default-language: Haskell2010
